// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate réduction générale > DFS 1`] = `
"salarié . cotisations . exonérations . réduction générale: 582
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 110
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 473"
`;

exports[`calculate réduction générale > DFS 2`] = `
"salarié . cotisations . exonérations . réduction générale: 582
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 110
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 473"
`;

exports[`calculate réduction générale > DFS 3`] = `
"salarié . cotisations . exonérations . réduction générale: 582
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 110
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 473"
`;

exports[`calculate réduction générale > DFS 4`] = `
"salarié . cotisations . exonérations . réduction générale: 582
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 110
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 473"
`;

exports[`calculate réduction générale > DFS 5`] = `
"salarié . cotisations . exonérations . réduction générale: 582
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 110
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 473"
`;

exports[`calculate réduction générale > JEI 1`] = `
"salarié . cotisations . exonérations . réduction générale: null
salarié . cotisations . exonérations . réduction générale . imputation chômage: null
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: null
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: null"
`;

exports[`calculate réduction générale > effectif 1`] = `
"salarié . cotisations . exonérations . réduction générale: 541
salarié . cotisations . exonérations . réduction générale . imputation chômage: 68
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 102
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 439"
`;

exports[`calculate réduction générale > effectif 2`] = `
"salarié . cotisations . exonérations . réduction générale: 548
salarié . cotisations . exonérations . réduction générale . imputation chômage: 68
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 102
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 446"
`;

exports[`calculate réduction générale > heures complémentaires 1`] = `
"salarié . cotisations . exonérations . réduction générale: 500
salarié . cotisations . exonérations . réduction générale . imputation chômage: 63
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 94
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 406"
`;

exports[`calculate réduction générale > heures supplémentaires 1`] = `
"salarié . cotisations . exonérations . réduction générale: 607
salarié . cotisations . exonérations . réduction générale . imputation chômage: 76
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 114
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 492"
`;

exports[`calculate réduction générale > salaire 1`] = `
"salarié . cotisations . exonérations . réduction générale: 32
salarié . cotisations . exonérations . réduction générale . imputation chômage: 4
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 6
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 26"
`;

exports[`calculate réduction générale > salaire 2`] = `
"salarié . cotisations . exonérations . réduction générale: 80
salarié . cotisations . exonérations . réduction générale . imputation chômage: 10
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 15
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 65"
`;

exports[`calculate réduction générale > salaire 3`] = `
"salarié . cotisations . exonérations . réduction générale: 160
salarié . cotisations . exonérations . réduction générale . imputation chômage: 20
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 30
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 130"
`;

exports[`calculate réduction générale > salaire 4`] = `
"salarié . cotisations . exonérations . réduction générale: 239
salarié . cotisations . exonérations . réduction générale . imputation chômage: 30
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 45
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 194"
`;

exports[`calculate réduction générale > salaire 5`] = `
"salarié . cotisations . exonérations . réduction générale: 319
salarié . cotisations . exonérations . réduction générale . imputation chômage: 40
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 60
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 259"
`;

exports[`calculate réduction générale > salaire 6`] = `
"salarié . cotisations . exonérations . réduction générale: 399
salarié . cotisations . exonérations . réduction générale . imputation chômage: 50
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 75
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 324"
`;

exports[`calculate réduction générale > salaire 7`] = `
"salarié . cotisations . exonérations . réduction générale: 479
salarié . cotisations . exonérations . réduction générale . imputation chômage: 60
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 90
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 389"
`;

exports[`calculate réduction générale > salaire 8`] = `
"salarié . cotisations . exonérations . réduction générale: 488
salarié . cotisations . exonérations . réduction générale . imputation chômage: 61
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 92
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 396"
`;

exports[`calculate réduction générale > salaire 9`] = `
"salarié . cotisations . exonérations . réduction générale: 222
salarié . cotisations . exonérations . réduction générale . imputation chômage: 28
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 42
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 180"
`;

exports[`calculate réduction générale > salaire 10`] = `
"salarié . cotisations . exonérations . réduction générale: 0
salarié . cotisations . exonérations . réduction générale . imputation chômage: 0
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 0
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 0"
`;

exports[`calculate réduction générale > stage 1`] = `
"salarié . cotisations . exonérations . réduction générale: 541
salarié . cotisations . exonérations . réduction générale . imputation chômage: 68
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 102
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 439"
`;

exports[`calculate réduction générale > temps partiel 1`] = `
"salarié . cotisations . exonérations . réduction générale: 408
salarié . cotisations . exonérations . réduction générale . imputation chômage: 51
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 77
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 331"
`;
